remove unused plugins 2

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,5 @@
 [versions]
-#android
-accompanistSystemuicontroller = "0.30.1"
-dagger = "2.48.1"
-minSdk = "24"
-compileSdk = "33"
-targetSdk = "33"
-versionCode = "1"
-versionName = "1.0"
+firebaseAuth = "1.10.4"
 
 #libraries
 kotlin = "1.9.10"
@@ -25,12 +18,6 @@ composeActivity = "1.5.1"
 composeConstraintLayout = "1.0.1"
 composeCoil = "2.4.0"
 
-
-#firebase
-firebaseAuth = "22.0.0"
-firebaseCore = "21.1.1"
-firebaseFirestore = "24.9.0"
-
 #other
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -39,13 +26,6 @@ appcompat = "1.6.1"
 material = "1.10.0"
 timber = "5.0.1"
 coroutines = "1.7.3"
-
-#static analyzers
-detekt = "1.23.1"
-detektCompose = "1.3.0"
-
-#cache
-room = "2.6.0"
 
 [libraries]
 
@@ -72,39 +52,28 @@ androidx-compose-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
 compose-coil = { module = "io.coil-kt:coil-compose", version.ref = "composeCoil" }
 
-#static analyzers
-detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-detekt-compose = { module = "ru.kode:detekt-rules-compose", version.ref = "detektCompose" }
-detekt-ruleauthors = { module = "io.gitlab.arturbosch.detekt:detekt-rules-ruleauthors", version.ref = "detekt" }
-
 #libraries
 androidx-coreKtx = { module = "androidx.core:core-ktx", version.ref = "androidXCoreKtx" }
 androidx-lifecycle-runtimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycleRuntimeKtx" }
-timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
+firebase-auth = { module = "dev.gitlive:firebase-auth", version.ref = "firebaseAuth" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
-
-#static analyzers
-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 
 # Plugins defined by this project
 listbook-android-application = { id = "listbook.android.application", version = "unspecified" }
